added worker registration for heartbeat and lock ttl

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Etcd": "http://localhost:23791,http://localhost:23792,http://localhost:23793"
   }
 }
